# aduib-ai

./: .env  .env.example  .env.production  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  aduib_app.py  app.py  app_factory.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  rpc_app.py
.bmad-iter/: config.yaml  state.yaml
.claude/: settings.local.json
aduib_ai/: .env.example  .ruff.toml  README.md  aduib_app.py  app.py  app_factory.py  mypy.ini  pyproject.toml  requirements.txt
configs/: app_config.py  task_cache_config.py
constants/: __init__.py  api_key_source.py
controllers/: params.py  route.py
deploy/: Dockerfile  Dockerfile.base  aduib_ai_base.sh  aduib_ai_deploy.sh  stop.bat
docs/: P1_COMPLETION_SUMMARY.md  P2_COMPLETION_SUMMARY.md  QA Memory.md  QA-Score.md  README_IMPROVEMENTS.md  anthropic-integration.md  context_var_enhancement_plan.md  context_var_migration_completed.md  context_var_migration_guide.md  context_var_usage_examples.md  qa_memory_openapi.json  rpc-port-management.md  rpc-port-quick-reference.md  supervisor-agent-prompt.md  task_cache_api_reference.md  task_cache_implementation.md  task_cache_p1_summary.md  task_cache_p2_summary.md  troubleshooting-504.md
event/: event_manager.py
libs/: __init__.py  context.py  contextVar_wrapper.py  contextVar_wrapper_enhanced.py  deps.py
models/: __init__.py  agent.py  agent_plan.py  agent_todo.py  api_key.py  auth_user.py  base.py  browser.py  cron_job.py  document.py  engine.py  failure_pattern.py  learning_signal.py  mcp.py  memory.py  memory_conversation.py  model.py  (+19 more)
(+983 files in other folders)
