[project]
name = "aduib-ai"
version = "0.1.0"
description = "Aduib AI - A Python library for building AI applications with Aduib."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "chaorenex1", email = "24537608z@gmail.com"},
    ]
dependencies = [
    "bcrypt>=4.3.0",
    "boto3>=1.37.11",
    "fastapi>=0.116.1",
    "ffmpeg-python>=0.2.0",
    "flagembedding>=1.3.3",
    "funasr>=1.2.6",
    "jieba3>=1.0.2",
    "langchain-text-splitters>=0.3.6",
    "nacos-sdk-python>=2.0.1",
    "aduib-rpc>=1.0.10",
    "nacos-mcp-wrapper-python",
    "neomodel==5.4.5",
    "numpy==2.1.3",
    "opendal>=0.45.16",
    "peft==0.14.0",
    "pgvecto_rs>=0.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pymilvus[model]>=2.5.4",
    "sentry-sdk>=2.34.1",
    "sqlalchemy==2.0.39",
    "tiktoken>=0.7.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.0",
    "uvicorn>=0.34.2",
    "redis>=6.4.0",
    "pyzmq"
]
[project.optional-dependencies]
depcated = [
    "ollama>=0.5.3",
    "openai>=1.79.0",
    "qwen-vl-utils>=0.0.11",
    "pgvector>=0.4.1",
    "modelscope>=1.28.2",
]
dev = [
    "alembic==1.16.4",
    "pytest==8.4.1",
    "ruff"
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true
